# fantasy-mapbuilder_2

./: .gitignore  README.md  package-lock.json  package.json  svelte.config.js
Projects/test/: map-0.json  map-1.json  map-2.json  map-3.json  marker-0.json  marker-1.json  marker-2.json  marker-3.json
src/: app.html  store.svelte.ts  store.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: file_type.rs  ids.rs  lib.rs  main.rs  project_state.rs
src/components/: ChooseModal.svelte  CompositeModal.svelte  ConfirmModal.svelte  DropdownMapAndArticleSearch.svelte  Editor.svelte  EntityGrid.svelte  GraphNode.svelte  Homebar.svelte  ImageViewer.svelte  Informatic.svelte  KeyWordRenderer.svelte  Map.svelte  MapOption.svelte  Markdown.svelte  Marker.svelte  MarkerResizers.svelte  MarkerWindow.svelte  Modal.svelte  ParentMap.svelte  ScaleBar.svelte  Search.svelte  SearchInput.svelte  Toolbar.svelte  UploadModal.svelte  ZoomPan.svelte
src/components/mobile/: MobileInformatic.svelte  MobileToolbar.svelte
src/components/modals/: ArticleModal.svelte  CategoryModal.svelte  ChooseModal.svelte  CompositeModal.svelte  ConfirmModal.svelte  FilterModal.svelte  GraphModal.svelte  Modal.svelte  (+3 more)
src/lib/: article_stack.ts  bind_component.ts  data.svelte.ts  data.ts  database.types.ts  dtb.ts  goto_map.ts  graph_gen.svelte.ts  graph_gen.ts  keyword_manager.ts  modal_manager.svelte.ts  modal_manager.ts  store.ts  types.ts  utils.ts
src/routes/: +layout.svelte  +page.svelte
static/: index.html
supabase/: config.toml
ui/: change_map.js  index.html  informatic_manager.js
(+15 files in other folders)
